Todo based on example on angular web site (no loading from Web API yet).

--- a/Todo/Content/Site.css
+++ b/Todo/Content/Site.css
@@ -59,3 +59,8 @@ textarea {
 .validation-summary-valid {
     display: none;
 }
+
+.done-true {
+  text-decoration: line-through;
+  color: grey;
+}
