--- a/Todo/Views/Home/Index.cshtml
+++ b/Todo/Views/Home/Index.cshtml
@@ -1,20 +1,28 @@
-﻿<h2>Todo</h2>
-<div ng-controller="TodoCtrl">
-    <span>{{remaining()}} of {{todos.length}} remaining</span>
-    [ <a href="" ng-click="archive()">archive</a> ]
-      <ul class="unstyled">
-          <li ng-repeat="todo in todos">
-              <input type="checkbox" ng-model="todo.done">
-              <span class="done-{{todo.done}}">{{todo.text}}</span>
-          </li>
-      </ul>
-    <form ng-submit="addTodo()">
-    <input type="text" ng-model="todoText" size="30"
-        placeholder="add new todo here">
-    <input class="btn-primary" type="submit" value="add">
-    </form>
-</div>
+﻿@{
+    ViewBag.Title = "Todos";
+}
 
+<div class="container-fluid">
+    <h2>Todo</h2>
+    <div ng-controller="TodoCtrl">
+        <span>{{remaining()}} of {{todos.length}} remaining</span>
+        [ <a href="" ng-click="archive()">archive</a> ]
+        <ul class="unstyled">
+            <li ng-repeat="todo in todos">
+                <input type="checkbox" ng-model="todo.done">
+                <span class="done-{{todo.done}}">{{todo.text}}</span>
+            </li>
+        </ul>
+        <form ng-submit="addTodo()">            
+            <div class="controls">
+                <div class="input-append">
+                    <input type="text" ng-model="todoText" placeholder="add new todo here">
+                    <button class="btn" type="submit">Add</button>
+                </div>                
+            </div>
+        </form>
+    </div>
+</div>
 
 @section scripts
 {
