Fix little space with add button.

--- a/Todo/Views/Home/Index.cshtml
+++ b/Todo/Views/Home/Index.cshtml
@@ -16,8 +16,7 @@
         <form ng-submit="addTodo()">            
             <div class="controls">
                 <div class="input-append">
-                    <input type="text" ng-model="todoText" placeholder="add new todo here">
-                    <button class="btn" type="submit">Add</button>
+                    <input type="text" ng-model="todoText" placeholder="add new todo here"><button class="btn" type="submit">Add</button>
                 </div>                
             </div>
         </form>
