- Create todos (POST).

--- a/Todo/Views/Home/Index.cshtml
+++ b/Todo/Views/Home/Index.cshtml
@@ -25,5 +25,6 @@
 
 @section scripts
 {
+    <script src="~/Scripts/app/helper.js"></script>
     <script src="~/Scripts/app/controller.js"></script>
 }
